# prusa-octoapp-proxy

./: .gitignore  README.md  flake.nix  pyproject.toml  result
src/: data.py  data_poller.py  data_routes.py  decrypt.py  encryption.py  login.py  main.py  notifications.py  octoprint_routes.py  print_job.py  printer.py  printer_models.py  printer_status.py  prusa_link.py  websocket.py
