[project]
name = "octoapp-prusa-proxy"
version = "0.1.0"
description = "Proxy to make prusa printer appear as octoprint"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi[standard]>=0.122.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportAny = false
