[project]
name = "octoapp-prusa-proxy"
version = "0.1.0"
description = "Proxy to make prusa printer appear as octoprint"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.2",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportAny = false

[project.scripts]
prusa-octoapp-proxy = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
